tests/paczka1/small_fuzzy/56842927.err
Error in line 4: znPV9R A625 51,39
Error in line 2: znPV9R S912 22,9
Error in line 14: S912 S912 87,8
